# veekay

./: .gitignore
include/veekay/: graphics.hpp  types.hpp
source/: graphics.cpp  veekay.cpp
testbed/: CMakeLists.txt  main.cpp
testbed/lab_1/: CMakeLists.txt  main.cpp
testbed/lab_1/shaders/: lab_1.frag  lab_1.frag.spv  lab_1.vert  lab_1.vert.spv
testbed/lab_2/: CMakeLists.txt  main.cpp
testbed/lab_2/shaders/: lab_2.frag  lab_2.frag.spv  lab_2.vert  lab_2.vert.spv
testbed/lab_3/: CMakeLists.txt  main.cpp
testbed/lab_3/shaders/: lab_3.frag  lab_3.vert
testbed/lab_4/: CMakeLists.txt  main.cpp
testbed/lab_4/shaders/: shader.frag  shader.vert  shadow.vert
